--- a/public/sass/base/_colors.scss
+++ b/public/sass/base/_colors.scss
@@ -2,11 +2,14 @@
 $red: #E74C3C;
 
 // greens
-$green: #6da8af; //#26A65B
+$green: #26A65B;
 
 // blues
-$light-blue: #77949A;
+$light-blue: #6da8af;
 
+
+// yellow
+$yellow: #F7CA18;
 // greys
 $dark-gray: #313131;
 $gray: #ECECEC;
