--- a/public/sass/components/_forms.scss
+++ b/public/sass/components/_forms.scss
@@ -9,5 +9,9 @@ form {
     font-size: 1.1em;
     width: 90%;
     padding: 8px 15px;
+    &:focus {
+      border: 1px solid 
+      outline: 0;
+    }
   }
 }
