Added spinners and overlay boilerplate

--- a/public/sass/base/_colors.scss
+++ b/public/sass/base/_colors.scss
@@ -12,6 +12,7 @@ $light-blue: #6da8af;
 $yellow: #F7CA18;
 // greys
 $dark-gray: #313131;
+$darker-gray: #CACACA;
 $gray: #ECECEC;
 $light-gray: #FCFCFC;
 $white: #FFFFFF;
