--- a/views/dashboard/layout.slim
+++ b/views/dashboard/layout.slim
@@ -34,15 +34,11 @@ html lang="en"
               span.icon-text Dashboard
           li
             a.dash-link href="#"
-              span.icon.fa.fa-line-chart
-              span.icon-text Forecasts
-          li
-            a.dash-link href="#"
               span.icon.fa.fa-book
               span.icon-text Accounts
           li
             a.dash-link href="#"
-              span.icon.fa.fa-ship
+              span.icon.fa.fa-pie-chart
               span.icon-text Budgets
           li
             a.dash-link href="#"
