--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -54,6 +54,23 @@ form input[type=text] {
     border-radius: 3px;
     outline: 0; }
 
+.form-aligned {
+  text-align: left; }
+  .form-aligned label {
+    display: block; }
+  .form-aligned input[type=text] {
+    width: 80% !important; }
+  .form-aligned select {
+    padding: 6px; }
+
+.form-control-group {
+  padding: 0 25px; }
+
+.form-controls-group {
+  text-align: left;
+  padding: 0 25px;
+  margin-top: 20px; }
+
 .flex-grid {
   display: flex; }
 
@@ -104,22 +121,52 @@ table td {
   font-size: 1.5em;
   padding: 15px 15px; }
 
-.overlay {
+.overlay, #transactionOverlay, #accountOverlay, #budgetOverlay {
   background: rgba(0, 0, 0, 0.6);
   visibility: hidden;
   position: absolute;
+  height: 100%;
   left: 0px;
-  top: 0px;
+  top: -72px;
   width: 100%;
   text-align: center;
-  z-index: 1000; }
-  .overlay .overlay-box {
+  z-index: 800; }
+  .overlay .overlay-box, #transactionOverlay .overlay-box, #accountOverlay .overlay-box, #budgetOverlay .overlay-box {
     position: relative;
     width: 820px;
-    margin: 50px auto;
+    margin: 10% auto;
     border: 1px solid #000;
     background: #ECECEC;
     text-align: center; }
+
+.overlay-close {
+  color: #fff;
+  cursor: pointer;
+  position: absolute;
+  right: 20px;
+  top: 13px;
+  font-size: 1.4em;
+  text-align: right;
+  z-index: 1000; }
+
+.overlay-form {
+  font-size: 1.4em;
+  padding: 0 20px 30px 0; }
+  .overlay-form legend {
+    text-transform: uppercase;
+    background: #313131;
+    width: 800px;
+    color: #fff;
+    padding: 10px;
+    position: absolute;
+    left: 0;
+    text-align: left;
+    z-index: 900; }
+  .overlay-form .form-control-group {
+    margin-top: 10px; }
+  .overlay-form .overlay-form-seperator {
+    padding: 20px 0 0;
+    margin: 20px 0; }
 
 .dashboard-home {
   background: #FCFCFC; }
@@ -217,7 +264,8 @@ table td {
 
 #dashboard-controls {
   font-size: 1.3em;
-  padding: 20px; }
+  padding: 2% 10px;
+  margin-bottom: 5%; }
   #dashboard-controls button {
     margin: 0 5%;
     padding: 8px 20px; }
@@ -236,9 +284,32 @@ table td {
   bottom: 2px; }
 
 #addOptions {
+  display: none;
   position: absolute;
   background: #313131;
-  color: #fff; }
+  color: #fff;
+  top: 35px;
+  left: 93.5px;
+  font-size: 1.1em;
+  list-style: none; }
+  #addOptions li {
+    text-align: center;
+    text-transform: uppercase;
+    cursor: pointer;
+    background: #313131;
+    padding: 10px 25px;
+    border-bottom: 1px solid #ECECEC;
+    position: relative; }
+    #addOptions li i {
+      display: inline-block;
+      padding-right: 2px; }
+    #addOptions li span {
+      display: inline-block; }
+    #addOptions li:hover {
+      background: #4A4A4A; }
+
+#addOptions > li:first-of-type {
+  border-top: 1px solid #ECECEC; }
 
 #totals {
   width: 90%;
