--- a/views/dashboard/dashboard.slim
+++ b/views/dashboard/dashboard.slim
@@ -1,16 +1,48 @@
-
+#accountOverlay style="visibility: visible;"
+  .overlay-box
+    #closeNewAccount.fa.fa-close.overlay-close
+    form#newAccount.overlay-form.form.form-aligned method="post" action="/users/accounts"
+      fieldset
+        legend New Account
+        .overlay-form-seperator
+        .form-control-group.flex-grid.flex-1-2
+          .flex-cell
+            label Name
+            input type="text" name="account[name]"
+          .flex-cell
+            label Type
+            select name="account[type]"
+                option Checkings
+                option Savings
+                option Cash
+                option Credit Card
+        .form-controls-group
+          button.primary Add Account
+#transactionOverlay
+#budgetOverlay
 .dashboard-container
   .dashboard
     #dashboard-controls.flex-grid.flex-fit.flex-1-3
       .flex-cell
         button.primary#addButton
-          span.fa.fa-dollar
+          span.fa.fa-dollar 
           | Add
         ul#addOptions
-          li 
-            span.fa.fa-plus 
+          li#addAccountButton
+            i.fa.fa-plus style="position: relative; right: 20px;"
               | &nbsp;
-            | Transaction
+            span
+              | Account
+          li#addTransactionButton
+            i.fa.fa-plus style="position: relative; right: 5px;"
+              | &nbsp;
+            span
+              | Transaction
+          li#addBudgetButton
+            i.fa.fa-plus style="position: relative; right: 30px;"
+              | &nbsp;
+            span
+              | Budget
         button.primary#uploadButton
           span.fa.fa-upload
           | Upload
