--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,2 +1,32 @@
-*{margin:0;padding:0}*:before,*:after{box-sizing:inherit}html{font:62.5%/1.5 'Montserrat', sans-serif;height:100%;box-sizing:border-box}body{font-size:10px;width:100%;height:100%;z-index:100}img{box-sizing:content-box}#container{width:100%;height:100%;position:relative;z-index:200}.content{width:100%;height:100%;z-index:200}
+* {
+  margin: 0;
+  padding: 0; }
+  *:before, *:after {
+    box-sizing: inherit; }
+
+html {
+  font: 62.5%/1.5 'Montserrat', sans-serif;
+  height: 100%;
+  box-sizing: border-box; }
+
+body {
+  font-size: 10px;
+  width: 100%;
+  height: 100%;
+  z-index: 100; }
+
+img {
+  box-sizing: content-box; }
+
+#container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 200; }
+
+.content {
+  width: 100%;
+  height: 100%;
+  z-index: 200; }
+
 /*# sourceMappingURL=style.css.map */
