--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,4 +29,73 @@ img {
   height: 100%;
   z-index: 200; }
 
+.button, .primary {
+  color: #FFFFFF;
+  padding: 8px 15px;
+  border: none;
+  border-radius: 2px;
+  text-transform: uppercase; }
+
+.primary {
+  background: #313131; }
+
+.flex-grid {
+  display: flex; }
+
+.flex-cell {
+  flex: 1; }
+
+.flex-fit > .flex-cell {
+  flex: 1; }
+
+.flex-full > .flex-cell {
+  flex: 0 0 100%; }
+
+.flex-1-2 > .flex-cell {
+  flex: 0 0 50%; }
+
+.flex-1-3 > .flex-cell {
+  flex: 0 0 33.3333%; }
+
+.flex-1-4 > .flex-cell {
+  flex: 0 0 25%; }
+
+.flex-align-left {
+  text-align: left; }
+
+.flex-cell-gutter {
+  margin: 0 10px 0 10px; }
+
+.flex-align-center {
+  text-align: center; }
+
+.flex-align-right {
+  text-align: right; }
+
+#content-background {
+  width: 100%;
+  height: 100%;
+  background: url("../img/background-splash-page.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
+
+.content-overlay {
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7); }
+
+.header {
+  color: #fff;
+  text-align: center; }
+  .header h1 {
+    margin: 0;
+    padding: 5% 0 0;
+    font-size: 6em; }
+  .header h2 {
+    font-size: 2em;
+    font-style: italic;
+    font-weight: normal; }
+
 /*# sourceMappingURL=style.css.map */
