--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -19,6 +19,7 @@ img {
   box-sizing: content-box; }
 
 #container {
+  background: #FCFCFC;
   width: 100%;
   height: 100%;
   position: relative;
@@ -43,13 +44,13 @@ form fieldset {
   border: none;
   margin: 0;
   padding: 0; }
-form input[type=text] {
+form input[type=text], form input[type=email], form input[type=password] {
   font-size: 1.1em;
   width: 90%;
   padding: 8px 15px;
   border: 1px solid #CACACA;
   border-radius: 3px; }
-  form input[type=text]:focus {
+  form input[type=text]:focus, form input[type=email]:focus, form input[type=password]:focus {
     border: 1px solid #6da8af;
     border-radius: 3px;
     outline: 0; }
