--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,6 +19,7 @@ img {
   box-sizing: content-box; }
 
 #container {
+  background: #FCFCFC;
   width: 100%;
   height: 100%;
   position: relative;
@@ -92,7 +93,8 @@ img {
   .header h1 {
     margin: 0;
     padding: 5% 0 0;
-    font-size: 6em; }
+    font-size: 6em;
+    text-transform: uppercase; }
   .header h2 {
     font-size: 2em;
     font-style: italic;
