--- a/public/sass/components/_forms.scss
+++ b/public/sass/components/_forms.scss
@@ -5,7 +5,7 @@ form {
     padding: 0;
   }
 
-  input[type=text] {
+  input[type=text], input[type=email], input[type=password] {
     font-size: 1.1em;
     width: 90%;
     padding: 8px 15px;
