--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -3,32 +3,33 @@
 @import 'components/grids';
 
 #content-background {
-    width: 100%;
-    height: 100%;
-    background: url('../img/background-splash-page.jpg') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+  width: 100%;
+  height: 100%;
+  background: url('../img/background-splash-page.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .content-overlay {
-    width: 100%;
-    height: 100%; 
-    background: rgba(0, 0, 0, 0.7);
+  width: 100%;
+  height: 100%; 
+  background: rgba(0, 0, 0, 0.7);
 }
 
 .header {
-    color: #fff;
-    text-align: center;
-    h1 {
-        margin: 0;
-        padding: 5% 0 0;
-        font-size: 6em;
-    }
-    h2 {
-        font-size: 2em;
-        font-style: italic;
-        font-weight: normal;
-    }
+  color: #fff;
+  text-align: center;
+  h1 {
+    margin: 0;
+    padding: 5% 0 0;
+    font-size: 6em;
+     text-transform: uppercase;
+  }
+  h2 {
+    font-size: 2em;
+    font-style: italic;
+    font-weight: normal;
+  }
 }
