--- a/views/users/layout.slim
+++ b/views/users/layout.slim
@@ -1,14 +1,13 @@
 doctype html
 html lang="en"
   head
+    title=@title
     meta charset="utf-8"
     meta name="viewport" content="width=device-width, initial-scale=1"
+    link rel="stylesheet" href="/css/users.css" type="text/css"
     link rel="stylesheet" href="/css/normalize.css" type="text/css"
     link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700" type="text/css"
     link rel="stylesheet" href="/css/font-awesome.min.css" type="text/css"
-    link rel="stylesheet" href="/css/style.css" type="text/css"
   body
     #container
-      #content-background
-        .content-overlay
-          ==yield
+      ==yield
