--- a/public/sass/dashboard.scss
+++ b/public/sass/dashboard.scss
@@ -135,7 +135,7 @@
 
 .nav {
   background: $gray;
-  width: 128px;
+  width: 15%;
   height: 100%;
   border-right: 1px solid #ccc;
   position: fixed;
@@ -146,7 +146,6 @@
 #nav-menu {
   li {
     width: 100%;
-    height: 96px;
     border-bottom: 1px solid #ccc;
   }
 }
@@ -157,30 +156,29 @@
   width: 100%;
   height: 100%;
   text-decoration: none;
+  text-align: left;
+  padding: 15px 15px 15px 0;
   &:hover, &:focus {
     background: $light-gray;
   }
 }
 
 .icon {
-  font-size: $large;
-  padding: 28px 0 0;
-  display: block;
-  text-align: center;
+  padding-left: 25px;
+  font-size: $medium;
 }
 
 .icon-text {
-  font-size: $base-font-size;
-  display: block;
-  text-align: center;
+  padding-left: 5px;
+  font-size: $medium;
   text-transform: uppercase;
 }
 
 .dashboard-container {
-  margin-left: 128px;
+  margin-left: 15%;
   margin-top: 72px;
   height: 100%;
-  width: calc(100% - 128px);
+  width: calc(100% - 15%);
 }
 
 .dashboard {
