--- a/public/sass/dashboard.scss
+++ b/public/sass/dashboard.scss
@@ -3,6 +3,7 @@
 @import 'components/forms';
 @import 'components/grids';
 @import 'components/table';
+@import 'groups';
 
 .overlay {
   background: rgba(0, 0, 0, 0.6);
@@ -319,6 +320,16 @@
 
 .tags-cell {
   text-align: left;
+  span {
+    background: $gray;
+    margin: 0 5px;
+    padding: 8px 10px;
+    border-radius: 2px;
+    &:hover {
+      background: $darker-gray;
+      cursor: pointer;
+    }
+  }
 }
 .account-cell {
   text-align: left;
